tests/should_fail/let_destructure_literal_in_tuple.nv
module fail
// Let destructure: literal in tuple pattern — not irrefutable
let (0, b) = (1, 2)
